--- a/code/README
+++ b/code/README
@@ -1,4 +1,4 @@
-1. Simulations
+## **1. Simulations**
 
 File: simulation.ipynb 
 Scripts: Boolean2 
@@ -7,7 +7,7 @@ Scripts: Boolean2
 Notes: simulate the system under favourable (cmk-1=1, pher=0) and unfavourable (cmk-1=0, pher=1) conditions using asynchronous update. Perform perturbation experiments to emulate daf-c and daf-d mutants. Plot graphs using seaborn to look at the simulation trajectories in different simulation settings. 
 
 
-2. Stable motif Analysis
+## **2. Stable motif Analysis**
 
 File: dauer_stable motifs.ipynb
 Scripts: pystablemotifs
@@ -16,7 +16,7 @@ Scripts: pystablemotifs
 Notes: Extract attractors and stable motifs. Identify driver nodes for a specific target to control the attarctors. 
 
 
-3. Logic backbone
+## **3. Logic backbone**
 
 File: network_red.ipynb
 Scripts: https://github.com/parulm/suff_necc.git
